# events

./: .gitignore  .gitmodules  README.md
brocon18/: README.md  dev-path  stub  stub-bro  stub-vast  stub.py  throughput.patch  vast.bro  vast.ini
brocon18/cow-optimization/: CMakeLists.txt  amd-opteron-suse-42.txt
brocon18/cow-optimization/src/: main.cpp
brocon18/evaluation/: visualize.R
brocon18/evaluation/latency/: amd-opteron-suse-42.csv  benchmark  freebsd.csv  imac2017.csv  latency_bench.sh  latency_visualize.R  visualize.R  xps13-9343-nixos-unstable.csv
brocon18/evaluation/throughput/: Makefile  amd-opteron-suse-42.csv  benchmark  benchmark.sh  generate.cc  imac2017.csv  xps13-9343-nixos-unstable.csv
